(feat): paginator component

--- a/src/index.html
+++ b/src/index.html
@@ -1,41 +1,54 @@
 <!doctype html>
 <html lang="pt-BR">
 	<head>
-		<meta charset="utf-8"/>
+		<meta charset="utf-8" />
 		<title>Sistema de Egressos UFU</title>
-		<base href="/"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1"/>
-		<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png"/>
-		<link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png"/>
-		<link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png"/>
-		<link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#00a300"/>
-		<link rel="shortcut icon" href="/favicon/favicon.ico"/>
-		<meta name="msapplication-TileColor" content="#00aba9"/>
-		<meta name="msapplication-config" content="/favicon/browserconfig.xml"/>
-		<meta name="theme-color" content="#ffffff"/>
+		<base href="/" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png" />
+		<link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#00a300" />
+		<link rel="shortcut icon" href="/favicon/favicon.ico" />
+		<meta name="msapplication-TileColor" content="#00aba9" />
+		<meta name="msapplication-config" content="/favicon/browserconfig.xml" />
+		<meta name="theme-color" content="#ffffff" />
 
-		<meta name="description" content="Conecte-se com a UFU após a graduação! O Sistema de Egressos da Universidade Federal de Uberlândia facilita o contato entre ex-alunos e a instituição, promovendo networking e oportunidades."/>
-		<meta name="keywords" content="UFU, Universidade Federal de Uberlândia, egressos, ex-alunos, alumni, networking, universidade"/>
-		<meta name="author" content="Universidade Federal de Uberlândia"/>
-		<meta name="robots" content="index, follow"/>
+		<meta
+			name="description"
+			content="Conecte-se com a UFU após a graduação! O Sistema de Egressos da Universidade Federal de Uberlândia facilita o contato entre ex-alunos e a instituição, promovendo networking e oportunidades."
+		/>
+		<meta
+			name="keywords"
+			content="UFU, Universidade Federal de Uberlândia, egressos, ex-alunos, alumni, networking, universidade"
+		/>
+		<meta name="author" content="Universidade Federal de Uberlândia" />
+		<meta name="robots" content="index, follow" />
 
 		<!-- Open Graph para Facebook e redes sociais -->
-		<meta property="og:title" content="Sistema de Egressos UFU"/>
-		<meta property="og:description" content="Conecte-se com a UFU após a graduação! O Sistema de Egressos da Universidade Federal de Uberlândia facilita o contato entre ex-alunos e a instituição, promovendo networking e oportunidades."/>
+		<meta property="og:title" content="Sistema de Egressos UFU" />
+		<meta
+			property="og:description"
+			content="Conecte-se com a UFU após a graduação! O Sistema de Egressos da Universidade Federal de Uberlândia facilita o contato entre ex-alunos e a instituição, promovendo networking e oportunidades."
+		/>
 		<!--		<meta property="og:image" content="URL_da_imagem_de_destaque" />-->
 		<!--		<meta property="og:url" content="URL_do_sistema_de_egressos" />-->
-		<meta property="og:type" content="website"/>
+		<meta property="og:type" content="website" />
 
 		<!-- Twitter Card -->
 		<!--    <meta name="twitter:card" content="summary_large_image">-->
-		<meta name="twitter:title" content="Sistema de Egressos UFU"/>
-		<meta name="twitter:description" content="Conecte-se com a UFU após a graduação! O Sistema de Egressos da Universidade Federal de Uberlândia facilita o contato entre ex-alunos e a instituição, promovendo networking e oportunidades."/>
-		<meta name="twitter:image" content="URL_da_imagem_de_destaque"/>
-	  <link rel="manifest" href="/manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
-</head>
+		<meta name="twitter:title" content="Sistema de Egressos UFU" />
+		<meta
+			name="twitter:description"
+			content="Conecte-se com a UFU após a graduação! O Sistema de Egressos da Universidade Federal de Uberlândia facilita o contato entre ex-alunos e a instituição, promovendo networking e oportunidades."
+		/>
+		<meta name="twitter:image" content="URL_da_imagem_de_destaque" />
+		<link rel="manifest" href="/manifest.webmanifest" />
+
+		<meta name="theme-color" content="#1976d2" />
+	</head>
 	<body>
 		<app-root></app-root>
-	  <noscript>Please enable JavaScript to continue using this application.</noscript>
-</body>
+		<noscript>Please enable JavaScript to continue using this application.</noscript>
+	</body>
 </html>
