(feat): index.html

--- a/src/index.html
+++ b/src/index.html
@@ -31,18 +31,18 @@
 			property="og:description"
 			content="Conecte-se com a UFU após a graduação! O Sistema de Egressos da Universidade Federal de Uberlândia facilita o contato entre ex-alunos e a instituição, promovendo networking e oportunidades."
 		/>
-		<!--		<meta property="og:image" content="URL_da_imagem_de_destaque" />-->
-		<!--		<meta property="og:url" content="URL_do_sistema_de_egressos" />-->
+
+		<meta property="og:image" content="/logos/ufu_blue.png" />
+		<meta property="og:url" content="https://kind-tree-06e47270f.5.azurestaticapps.net/" />
 		<meta property="og:type" content="website" />
 
 		<!-- Twitter Card -->
-		<!--    <meta name="twitter:card" content="summary_large_image">-->
 		<meta name="twitter:title" content="Sistema de Egressos UFU" />
 		<meta
 			name="twitter:description"
 			content="Conecte-se com a UFU após a graduação! O Sistema de Egressos da Universidade Federal de Uberlândia facilita o contato entre ex-alunos e a instituição, promovendo networking e oportunidades."
 		/>
-		<meta name="twitter:image" content="URL_da_imagem_de_destaque" />
+		<meta name="twitter:image" content="/logos/ufu_blue.png" />
 		<link rel="manifest" href="/manifest.webmanifest" />
 
 		<meta name="theme-color" content="#1976d2" />
