--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,19 @@
 <html lang="pt-BR">
 	<head>
 		<meta charset="utf-8" />
-		<title>Sistema de Egressos UFU</title>
+		<title>Egressos UFU</title>
 		<base href="/" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="shortcut icon" href="/favicon.ico" />
 		<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png" />
-		<link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#00a300" />
-		<link rel="shortcut icon" href="/favicon/favicon.ico" />
-		<meta name="msapplication-TileColor" content="#00aba9" />
-		<meta name="msapplication-config" content="/favicon/browserconfig.xml" />
+		<link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#021c69" />
+		<link rel="manifest" href="/manifest.webmanifest" />
+		<meta name="apple-mobile-web-app-title" content="Egressos UFU" />
+		<meta name="application-name" content="Egressos UFU" />
+		<meta name="msapplication-TileColor" content="#2b5797" />
+		<meta name="msapplication-config" content="/browserconfig.xml" />
 		<meta name="theme-color" content="#ffffff" />
 
 		<meta
@@ -26,26 +29,23 @@
 		<meta name="robots" content="index, follow" />
 
 		<!-- Open Graph para Facebook e redes sociais -->
-		<meta property="og:title" content="Sistema de Egressos UFU" />
+		<meta property="og:title" content="Egressos UFU" />
 		<meta
 			property="og:description"
 			content="Conecte-se com a UFU após a graduação! O Sistema de Egressos da Universidade Federal de Uberlândia facilita o contato entre ex-alunos e a instituição, promovendo networking e oportunidades."
 		/>
 
-		<meta property="og:image" content="/logos/ufu_blue.png" />
+		<meta property="og:image" content="/logos/ufu_white_hor.png" />
 		<meta property="og:url" content="https://kind-tree-06e47270f.5.azurestaticapps.net/" />
 		<meta property="og:type" content="website" />
 
 		<!-- Twitter Card -->
-		<meta name="twitter:title" content="Sistema de Egressos UFU" />
+		<meta name="twitter:title" content="Egressos UFU" />
 		<meta
 			name="twitter:description"
 			content="Conecte-se com a UFU após a graduação! O Sistema de Egressos da Universidade Federal de Uberlândia facilita o contato entre ex-alunos e a instituição, promovendo networking e oportunidades."
 		/>
-		<meta name="twitter:image" content="/logos/ufu_blue.png" />
-		<link rel="manifest" href="/manifest.webmanifest" />
-
-		<meta name="theme-color" content="#1976d2" />
+		<meta name="twitter:image" content="/logos/ufu_white_hor.png" />
 	</head>
 	<body>
 		<app-root></app-root>
