--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 		<meta name="application-name" content="Egressos UFU" />
 		<meta name="msapplication-TileColor" content="#2b5797" />
 		<meta name="msapplication-config" content="/browserconfig.xml" />
-		<meta name="theme-color" content="#ffffff" />
+		<meta name="theme-color" content="#021C69" />
 
 		<meta
 			name="description"
