(feat): att icons

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 		<title>Egressos UFU</title>
 		<base href="/" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="shortcut icon" href="/favicon.ico" />
+		<link rel="shortcut icon" href="/favicon/favicon.ico" />
 		<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png" />
@@ -13,7 +13,7 @@
 		<link rel="manifest" href="/manifest.webmanifest" />
 		<meta name="apple-mobile-web-app-title" content="Egressos UFU" />
 		<meta name="application-name" content="Egressos UFU" />
-		<meta name="msapplication-TileColor" content="#2b5797" />
+		<meta name="msapplication-TileColor" content="#ffffff" />
 		<meta name="msapplication-config" content="/browserconfig.xml" />
 		<meta name="theme-color" content="#021C69" />
 
