--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,13 @@
 			content="Conecte-se com a UFU após a graduação! O Sistema de Egressos da Universidade Federal de Uberlândia facilita o contato entre ex-alunos e a instituição, promovendo networking e oportunidades."
 		/>
 		<meta name="twitter:image" content="/logos/ufu_white_hor.png" />
+
+		<meta
+			property="creator.productor"
+			content="http://estruturaorganizacional.dados.gov.br/id/unidade-organizacional/253618"
+		/>
+
+		<script defer="defer" src="https://barra.brasil.gov.br/barra_2.0.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<app-root></app-root>
